Add -XX:+AggressiveOpts to give Java all the help it can get